fix large control align-right padding

--- a/packages/core/src/components/forms/_controls.scss
+++ b/packages/core/src/components/forms/_controls.scss
@@ -391,6 +391,11 @@ $control-checked-background-color-active: nth(map-get($button-intents, "primary"
         }
       }
     }
+
+    &.#{$ns}-align-right {
+      padding-right: $control-indicator-size-large + $pt-grid-size;
+      padding-left: 0;
+    }
   }
 
   .#{$ns}-dark & {
@@ -529,22 +534,22 @@ $control-checked-background-color-active: nth(map-get($button-intents, "primary"
 
   Markup:
   <div>
-  <label class="#{$ns}-label">A group of related options</label>
-  <label class="#{$ns}-control #{$ns}-checkbox #{$ns}-inline">
-    <input type="checkbox" />
-    <span class="#{$ns}-control-indicator"></span>
-    First
-  </label>
-  <label class="#{$ns}-control #{$ns}-checkbox #{$ns}-inline">
-    <input type="checkbox" />
-    <span class="#{$ns}-control-indicator"></span>
-    Second
-  </label>
-  <label class="#{$ns}-control #{$ns}-checkbox #{$ns}-inline">
-    <input type="checkbox" />
-    <span class="#{$ns}-control-indicator"></span>
-    Third
-  </label>
+    <label class="#{$ns}-label">A group of related options</label>
+    <label class="#{$ns}-control #{$ns}-checkbox #{$ns}-inline">
+      <input type="checkbox" />
+      <span class="#{$ns}-control-indicator"></span>
+      First
+    </label>
+    <label class="#{$ns}-control #{$ns}-checkbox #{$ns}-inline">
+      <input type="checkbox" />
+      <span class="#{$ns}-control-indicator"></span>
+      Second
+    </label>
+    <label class="#{$ns}-control #{$ns}-checkbox #{$ns}-inline">
+      <input type="checkbox" />
+      <span class="#{$ns}-control-indicator"></span>
+      Third
+    </label>
   </div>
 
   Styleguide checkbox-inline
